lesson_09/auth-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: auth-proxy
spec:
    rules:
        - host: arch.homework
          http:
              paths:
                  - backend:
                        serviceName: auth
                        servicePort: 80
                    path: /auth/api/v1/auth/login/test
                  - backend:
                        serviceName: auth
                        servicePort: 80
                    path: /auth/api/v1/profile
                  - backend:
                        serviceName: auth
                        servicePort: 80
                    path: /auth/api/v1/profile/*
